<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#34B2FF"
    style="@style/AppTheme">
   <!-- android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="de.hannes.strafenkatalog.StrafeAnlegen"
    android:background="#34B2FF"
    style="@style/AppTheme"
    > -->

    <!--   <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/et_rel_datum"
        android:inputType="date"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:hint="@string/tv_datum"
        android:onClick="setDate" /> -->

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/et_rel_grund"
        android:layout_centerHorizontal="true"
        android:hint="@string/et_grund_strafe"
        android:layout_below="@+id/dp_rel_change"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp" />

    <DatePicker
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dp_rel_change"
        android:spinnersShown="false"
        android:focusableInTouchMode="false"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_rel_grund"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/bt_esc"
            android:id="@+id/bt_rel_esc"
            android:singleLine="false"
            android:layout_below="@+id/et_rel_grund"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@drawable/buttons"
            style="@style/ButtonText"
            android:layout_weight="1" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/bt_del"
            android:id="@+id/bt_rel_del"
            android:background="@drawable/buttons"
            style="@style/ButtonText"
            android:layout_weight="1" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/bt_aendern"
            android:id="@+id/bt_rel_ok"
            android:layout_alignTop="@+id/bt_rel_esc"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/buttons"
            style="@style/ButtonText"
            android:layout_weight="1" />
    </LinearLayout>

</RelativeLayout>
